--- a/source/elements/layout/layout.jade
+++ b/source/elements/layout/layout.jade
@@ -6,3 +6,8 @@ html(lang="ru")
     link(rel="stylesheet", href="css/styles.css")
   body
     block content
+
+    script(src="js/modernizr/modernizr.js")
+    script(src="js/jquery/dist/jquery.min.js")
+    script(src="js/velocity/velocity.min.js")
+    script(src="js/scripts.js", async, defer)
