--- a/source/elements/popup/popup.jade
+++ b/source/elements/popup/popup.jade
@@ -1,4 +1,9 @@
-.popup
+.popup.popup_success
+  button.popup__close(type="button")
+  header.popup__header
+    h2.popup__title спасибо! вы успешно подписались.
+
+.popup.popup_form
   button.popup__close(type="button")
   header.popup__header
     h2.popup__title Уникальные возможности для экономии и супер советы в вашем почтовом ящике
