--- a/source/elements/popup/popup.jade
+++ b/source/elements/popup/popup.jade
@@ -2,6 +2,7 @@
   button.popup__close(type="button")
   header.popup__header
     h2.popup__title спасибо! вы успешно подписались.
+    button.popup__submit.popup__submit_close(type="submit") Вернуться на сайт
 
 .popup.popup_form
   button.popup__close(type="button")
