--- a/source/css/fonts.css
+++ b/source/css/fonts.css
@@ -10,13 +10,14 @@
 }
 
 
+
 @font-face {
-    font-family: 'Din Condensed';
-    src: url('../fonts/pt_din_condensed_cyrillic-webfont.eot');
-    src: url('../fonts/pt_din_condensed_cyrillic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/pt_din_condensed_cyrillic-webfont.woff2') format('woff2'),
-         url('../fonts/pt_din_condensed_cyrillic-webfont.woff') format('woff'),
-         url('../fonts/pt_din_condensed_cyrillic-webfont.ttf') format('truetype');
+    font-family: 'Din Condensed C';
+    src: url('../fonts/dincondensedc-webfont.eot');
+    src: url('../fonts/dincondensedc-webfont.eot?#iefix') format('embedded-opentype'),
+         url('../fonts/dincondensedc-webfont.woff2') format('woff2'),
+         url('../fonts/dincondensedc-webfont.woff') format('woff'),
+         url('../fonts/dincondensedc-webfont.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 
