--- a/source/elements/popup/popup.styl
+++ b/source/elements/popup/popup.styl
@@ -28,7 +28,7 @@
   &__submit
     height 56px
     background linear-gradient(to bottom, rgba(255,254,0,1) 0%,rgba(255,191,0,1) 100%);
-    box-shadow 0 3px 0 0 $yellow-dark, 0 2px 0 6px $dark-white
+    box-shadow 0 3px 0 0 $yellow-dark, 0 2px 0 5px rgba($black, .05)
     border-width 1px
     border-style solid
     border-radius 30px
@@ -37,14 +37,13 @@
     box-sizing border-box
     cursor pointer
     text-shadow 0 1px $yellow-light
-    font-size 27px
+    font-size 22px
     line-height 56px
     text-transform uppercase
     font-family 'PF Din Bold'
     &_close
       display block
       width auto
-      box-shadow 0 3px 0 0 $yellow-dark
       margin 0 0 0 40px
       padding 0 40px
     &:hover
