--- a/source/elements/popup/popup.styl
+++ b/source/elements/popup/popup.styl
@@ -28,11 +28,10 @@
   &__submit
     height 56px
     background linear-gradient(to bottom, rgba(255,254,0,1) 0%,rgba(255,191,0,1) 100%);
-    box-shadow 0 3px 0 0 $yellow-dark, 0 2px 0 5px rgba($black, .05)
-    border-width 1px
-    border-style solid
+    box-shadow inset 0 0 0 1px $yellow-light, 0 3px 0 0 $yellow-dark, 0 2px 0 5px rgba($black, .05)
+    border-width 0
+    border-style none
     border-radius 30px
-    border-color $yellow-light
     width 100%
     box-sizing border-box
     cursor pointer
@@ -41,10 +40,10 @@
     line-height 56px
     text-transform uppercase
     font-family 'PF Din Bold'
+    white-space nowrap
     &_close
       display block
       width auto
-      margin 0 0 0 40px
       padding 0 40px
     &:hover
       background linear-gradient(to bottom, rgba(255,191,0,1) 0%, rgba(255,254,0,1) 100%);
@@ -147,10 +146,12 @@
     text-transform uppercase
     font-size 40px
     line-height 54px
-    padding 50px 40px
+    padding 0
+    margin 0 0 20px
     max-width 640px
   &__header
-    height 285px
+    height 185px
+    padding 50px 40px
     background $green url('../images/popup-bg.jpg') 525px 100% no-repeat
     position relative
   &__lightbox
@@ -238,3 +239,8 @@
     &__title
       font-size 24px
       line-height 32px
+
+@media (max-width: 450px)
+  html body .popup
+    &__submit
+      font-size 18px
