--- a/source/elements/popup/popup.styl
+++ b/source/elements/popup/popup.styl
@@ -13,6 +13,11 @@
   box-shadow 0 0 25px 0 rgba($black, .25)
   font-family Arial, Helvetica, sans-serif
 
+  &_scrolable
+    position absolute
+    top 30px
+    transform none
+    margin-bottom 30px
 
   &__subscribe
     position relative
