--- a/source/elements/layout/layout.jade
+++ b/source/elements/layout/layout.jade
@@ -2,6 +2,8 @@
 html(lang="ru")
   head
     meta(charset="UTF-8")
+    meta(name="viewport", content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1")
+    meta(http-equiv="X-UA-Compatible", content="IE=edge")
     title Попап | Leroy Merlin
     link(rel="stylesheet", href="css/styles.css")
   body
