--- a/source/elements/popup/popup.styl
+++ b/source/elements/popup/popup.styl
@@ -7,6 +7,7 @@
   right 30px
   transform translateY(-50%)
   background-color $white
+  background-clip padding-box
   max-width 1120px
   margin -100vh auto 0
   z-index 1001
@@ -17,7 +18,7 @@
     position absolute
     top 30px
     transform none
-    margin-bottom 30px
+    border-bottom 30px solid rgba($black, 0)
 
   &__subscribe
     position relative
@@ -223,18 +224,51 @@
 
 @media (max-width: 700px)
   html body .popup
+    left 15px
+    right 15px
+    &__header
+      padding 20px
+    &__disclaimer
+      position static
+      white-space normal
+      margin 0
+      width auto
+      padding 0
+      a
+        font-size 12px
+        line-height 14px
     &__field
-      margin 0 0 20px
+      margin 0 0 10px
     &__subscribe
-      margin 20px 40px 0
+      margin 15px 15px 0
+    &__submit
+      height 40px
+      border-radius 20px
+      line-height 45px
+      font-size 16px
+    &__features
+      margin 0 15px
+      padding 10px 0 15px
+    &__feature
+      display list-item
+      list-style inside disc
+      padding 0
+      background none
+      line-height 24px
+      font-size 18px
     &__input
       position relative
-      top 56px
+      top 30px
+      height 30px
+      padding 7px 5px
+      line-height 16px
+      font-size 14px
     &__label
       position relative
-      line-height 56px
+      line-height 30px
+      padding 0 5px
       left auto
-      bottom 56px
+      bottom 30px
       right auto
       top auto
     &__feature
@@ -242,10 +276,5 @@
       display block
       float none
     &__title
-      font-size 24px
-      line-height 32px
-
-@media (max-width: 450px)
-  html body .popup
-    &__submit
-      font-size 18px
+      font-size 12px
+      line-height 16px
