--- a/source/elements/popup/popup.jade
+++ b/source/elements/popup/popup.jade
@@ -14,11 +14,11 @@
   form.popup__subscribe(action="/subscribe/", method="post")
     
     label.popup__field
-      input.popup__input(type="email", name="email", value="", required="required")
+      input.popup__input.popup__input_email(type="email", name="email", value="", required="required")
       span.popup__label Ваш email
         
     label.popup__field
-      input.popup__input(type="text", name="name", value="", required="required")
+      input.popup__input.popup__input_name(type="text", name="name", value="", required="required")
       span.popup__label Как к вам обращаться?
         
     .popup__field
