ie8 issues has been fixed

--- a/source/elements/popup/popup.jade
+++ b/source/elements/popup/popup.jade
@@ -30,4 +30,4 @@
     li.popup__feature.popup__feature_icon_article Полезные статьи
     li.popup__feature.popup__feature_icon_news Новинки асортимента
     
-.popup__lightbox
+.popup__lightbox: b
