--- a/source/elements/layout/layout.jade
+++ b/source/elements/layout/layout.jade
@@ -4,12 +4,13 @@ html(lang="ru")
     meta(charset="UTF-8")
     meta(name="viewport", content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1")
     meta(http-equiv="X-UA-Compatible", content="IE=edge")
+    script(src="js/modernizr/modernizr.js")
     title Попап | Leroy Merlin
     link(rel="stylesheet", href="css/styles.css")
   body
     block content
 
-    script(src="js/modernizr/modernizr.js")
-    script(src="js/jquery/dist/jquery.min.js")
+    script(src="js/html5shiv/dist/html5shiv.min.js")
+    script(src="js/jquery/jquery.min.js")
     script(src="js/velocity/velocity.min.js")
     script(src="js/scripts.js", async, defer)
